# fplaunchwrapper

./: .bandit  .bandit.yml  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGS_AND_ISSUES_REPORT.md  BUG_AUDIT_REPORT.md  CHANGES.md  COMMAND_REFERENCE.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE_AUDIT_SUMMARY.md  CONTRIBUTING.md  COVERAGE_COMPLETE.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_NEEDED.md  DESIGN.md  ENHANCEMENT_PLAN.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS_REPORT.md  FIREFOX_LAUNCH_PREVENTION.md  FIXES_COMPLETED_SUMMARY.md  FIX_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_BYPASS_IMPLEMENTATION.md  INTERACTIVE_FORCE_DOCUMENTATION.md  LICENSE  MANIFEST.in  Makefile  PATH_RESOLUTION_FIX.md  PROJECT_COMPLETION_SUMMARY.md  QA_FIXES_STATUS.md  QA_REPORT.md  QUALITY_ASSURANCE_SUMMARY.md  QUICKSTART.md  README.md  REAL_COVERAGE_REPORT.md  RELEASE_v1.1.0.md  RELEASE_v1.3.0.md  SAFETY_MODULE_RECOMMENDATION.md  (+57 more)
.clio/: instructions.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: ci-post-commit.md
.github/prompts/: copilot-instructions-blueprint-generator.prompt.md
.github/workflows/: ci.yml  release.yml
.ralph/: current-events  current-loop-id  events-20260326-234712.jsonl  events-20260327-103916.jsonl  history.jsonl
.ralph/agent/: handoff.md  memories.md  summary.md  tasks.jsonl
config/: bin_dir
cov_annotate/: fix_fstring.py,cover  launch.py,cover  rebuild_wrapper.py,cover  reset_fstring.py,cover  run_tests.py,cover  update_edit_sandbox.py,cover  z_306ed2d68c6501e8___init__.py,cover  z_306ed2d68c6501e8_cleanup.py,cover  z_306ed2d68c6501e8_cli.py,cover  z_306ed2d68c6501e8_config_manager.py,cover  z_306ed2d68c6501e8_flatpak_monitor.py,cover  z_306ed2d68c6501e8_fplaunch.py,cover  z_306ed2d68c6501e8_generate.py,cover  z_306ed2d68c6501e8_launch.py,cover  z_306ed2d68c6501e8_manage.py,cover  z_306ed2d68c6501e8_notifications.py,cover  z_306ed2d68c6501e8_python_utils.py,cover  z_306ed2d68c6501e8_safety.py,cover  z_306ed2d68c6501e8_systemd_setup.py,cover
docs/: ADVANCED_USAGE.md  DEFERRED_FEATURES_IMPLEMENTATION.md  FORMAL_VERIFICATION_REPORT.md  FPWRAPPER_FORCE.md  IMPLEMENTATION_STATUS.md  SECURITY_REVIEW.md  TEST_COVERAGE_ANALYSIS.md  TEST_SUITE_VERIFICATION_REPORT.md  path_resolution.md
docs/info/: fplaunchwrapper.texi
docs/man/: fplaunch-cleanup.1  fplaunch-config.1  fplaunch-generate.1  fplaunch-launch.1  fplaunch-manage.1  fplaunch-monitor.1  fplaunch-setup-systemd.1  fplaunchwrapper.7
docs/reports/: README.md  SUBCOMMAND_VALIDATION.md
examples/: post-run-examples.md  pre-launch-examples.md  script-usage-guide.md
fplaunch/: __init__.py  cleanup.py  cli.py  config_manager.py  flatpak_monitor.py  fplaunch.py  generate.py  launch.py  manage.py  notifications.py  python_utils.py  safety.py  systemd_setup.py
fplaunchwrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lib/: __init__.py  alias.sh  cleanup.py  cli.py  cli_commands.py  cli_commands.py.new  cli_generation.py  cli_imports.py  cli_inspect.py  cli_presets.py  cli_profiles.py  cli_system.py  cli_systemd.py  cli_utils.py  cli_utils_cmd.py  common.sh  common.sh.bak  config.sh  config_constants.py  config_manager.py  config_manager_cli.py  config_manager_presets.py  config_models.py  config_validation.py  desktop_parser.py  env.sh  exceptions.py  flatpak_monitor.py  fplaunch.py  generate.py  import_utils.py  install.sh  launch.py  launch.sh  logging_utils.py  main_entrypoint.py  manage.py  notifications.py  paths.py  portal_launcher.py  (+9 more)
lib/templates/: wrapper.template.sh
memory-bank/: activeContext.md  progress.md  projectbrief.md
packaging/: README.md  build-deb.sh  build-rpm.sh  fplaunchwrapper.spec  test-rpm-in-chroot.sh  test-rpm-mock.sh
packaging/debian/: changelog  control  postinst  rules
plans/: fplaunchwrapper-missing-functionality.md  hook-failure-modes-design.md  low-coverage-analysis.md  refactoring-duplication-cleanup.md
templates/: wrapper.template.sh
test_bins/: alpaca  audacity  authenticator  baobab  bazaar  bottles  buffer  calculator  calendar  characters  chrome  chromium  clapgrep  client  clocks  cockpitclient  constrict  contacts  converter  curtail  dbeavercommunity  dconf-editor  decibels  dejadup  deskflow  devpod  devtoolbox  digger  distroshelf  extensionmanager  fileroller  filezilla  firefox  firmware  flatseal  font-viewer  fontdownloader  fplaunch-manage  freerdp  gearlever  (+54 more)
tests/: COMPREHENSIVE_QA_GUIDE.md  README.md  conftest.py  run_all_tests.sh  test_common_lib.sh  test_edge_cases.sh  test_helpers.sh  test_install_cleanup.sh  test_integration.sh  test_management_functions.sh  test_package_installation.sh  test_systemd_lifecycle.sh  test_wrapper_generation.py  test_wrapper_generation.sh  test_wrapper_options.sh
tests/adversarial/: README.md  test_fplaunchwrapper_adversarial.sh  test_package_adversarial.sh  test_robustness_adversarial.sh  test_systemd_adversarial.sh  test_wrapper_options_adversarial.sh
tests/python/: performance_simple.py  test_adversarial_breakage.py  test_alias_collision_detection.py  test_all_subcommands_validation.py  test_audit_fixes.py  test_cleanup.py  test_cleanup_coverage.py  test_cleanup_coverage_extra.py  test_cleanup_real.py  test_cleanup_scanning_enhancements.py  test_cli_flags.py  test_cli_fuzz.py  test_cli_inspect_coverage.py  test_cli_profiles_validation_coverage.py  test_cli_subcommand_coverage.py  test_cli_utils.py  test_comprehensive.py  test_config_manager.py  test_config_manager_cli.py  test_config_manager_coverage.py  test_config_manager_fuzz.py  test_cron_config.py  test_desktop_parser.py  test_edge_cases.py  test_edge_cases_comprehensive.py  test_edge_cases_focused.py  test_emit_functionality.py  test_emit_safety.py  test_emit_simple.py  test_emit_verbose.py  test_error_paths.py  test_exceptions.py  test_final_validation.py  test_flatpak_monitor.py  test_flatpak_monitor_install_uninstall.py  test_flatpak_monitor_main.py  test_focused.py  test_force_interactive_verification.py  (+62 more)
(+23 files in other folders)
