[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fplaunchwrapper"
version = "1.4.0"
description = "Comprehensive Flatpak wrapper management system"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    # Cross-platform directory handling (stdlib pathlib used directly)
    "platformdirs>=3.0.0",
    "watchdog>=3.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
robustness = [
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "psutil>=5.9.0",
]
advanced = [
    "structlog>=23.1.0",
    "validators>=0.22.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.2.0",
    "tomli>=2.0.0",
    "ruff>=0.14.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
    "pydantic>=2.0.0",
]
security = [
    "cryptography>=41.0.0",
    "bandit>=1.7.0",
]
integration = [
    "dbus-python>=1.3.0",
    "xvfbwrapper>=0.2.9",
]
all = [
    "fplaunchwrapper[robustness,advanced,dev,security,integration]",
]

[project.urls]
Homepage = "https://github.com/dtg01100/fplaunchwrapper"
Repository = "https://github.com/dtg01100/fplaunchwrapper"
Issues = "https://github.com/dtg01100/fplaunchwrapper/issues"
Documentation = "https://github.com/dtg01100/fplaunchwrapper#readme"

[project.scripts]
fplaunch = "lib.fplaunch:main"
fplaunch-cli = "lib.cli:main"
fplaunch-generate = "lib.generate:main"
fplaunch-manage = "lib.manage:main"
fplaunch-launch = "lib.launch:main"
fplaunch-cleanup = "lib.cleanup:main"
fplaunch-setup-systemd = "lib.systemd_setup:main"
fplaunch-config = "lib.config_manager:main"
fplaunch-monitor = "lib.flatpak_monitor:main"

[tool.setuptools]
packages = ["lib"]

[tool.setuptools.package-data]
lib = ["*.py", "templates/*.sh"]
fplaunch = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["lib", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--timeout=300",
    "--timeout-method=thread"
]
timeout = 300
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security-focused"
]

[tool.coverage.run]
source = ["lib"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    ".tox",
]

[tool.pylint.main]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "watchdog.*",
    "pydantic.*",
    "tomli.*",
    "click.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    ".tox",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "A",
    "RET",
]
ignore = [
    "E501",
    "E203",
    "E701",
    "E702",
    "E101",
    "B008",
    "B017",
    "B007",
    "B011",
    "RET501",
    "RET502",
    "RET505",
    "F401",
]
